Fix: changed bg image for instructions section, body bg repeat on mobile and minor changes in faq content

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,6 +96,12 @@ body{
   .bg-voting-room {
     background-attachment:scroll;
   }
+
+  .bg-anime {
+    background-position:top left;
+    background-size:contain;
+    background-repeat: repeat-y;
+  }
 }
 
 
